<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="androidx_startup">androidx.startup</string>
    <string name="dialog_ok">OK</string>
    <string name="error_engine_setup_message">Unable to setup the Godot Engine! Aborting…</string>
    <string name="error_missing_vulkan_requirements_message">Warning - this device does not meet the requirements for Vulkan support</string>
    <string name="godot_project_name_string">godot-project-name</string>
    <string name="kilobytes_per_second">%1$s KB/s</string>
    <string name="notification_download_complete">Download complete</string>
    <string name="notification_download_failed">Download unsuccessful</string>
    <string name="state_completed">Download finished</string>
    <string name="state_connecting">Connecting to the download server</string>
    <string name="state_downloading">Downloading resources</string>
    <string name="state_failed">Download failed</string>
    <string name="state_failed_cancelled">Download canceled</string>
    <string name="state_failed_fetching_url">Download failed because the resources could not be found</string>
    <string name="state_failed_sdcard_full">Download failed because the external storage is full</string>
    <string name="state_failed_unlicensed">Download failed because you may not have purchased this app</string>
    <string name="state_fetching_url">Looking for resources to download</string>
    <string name="state_idle">Waiting for download to start</string>
    <string name="state_paused_by_request">Download paused</string>
    <string name="state_paused_network_setup_failure">Download paused. Test a website in browser</string>
    <string name="state_paused_network_unavailable">Download paused because no network is available</string>
    <string name="state_paused_roaming">Download paused because you are roaming</string>
    <string name="state_paused_sdcard_unavailable">Download paused because the external storage is unavailable</string>
    <string name="state_paused_wifi_disabled">Download paused because wifi is disabled</string>
    <string name="state_paused_wifi_unavailable">Download paused because wifi is unavailable</string>
    <string name="state_unknown">Starting…</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="text_button_cancel">Cancel</string>
    <string name="text_button_cancel_verify">Cancel Verification</string>
    <string name="text_button_pause">Pause Download</string>
    <string name="text_button_resume">Resume Download</string>
    <string name="text_button_resume_cellular">Resume download</string>
    <string name="text_button_wifi_settings">Wi-Fi settings</string>
    <string name="text_error_title">Error!</string>
    <string name="text_paused_cellular">Would you like to enable downloading over cellular connections? Depending on your data plan, this may cost you money.</string>
    <string name="text_paused_cellular_2">If you choose not to enable downloading over cellular connections, the download will automatically resume when wi-fi is available.</string>
    <string name="text_validation_complete">XAPK File Validation Complete. Select OK to exit.</string>
    <string name="text_validation_failed">XAPK File Validation Failed.</string>
    <string name="text_verifying_download">Verifying Download</string>
    <string name="time_remaining">Time remaining: %1$s</string>
    <string name="time_remaining_notification">%1$s left</string>
</resources>
