<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="0.0">
        <TextView android:textStyle="bold" android:id="@id/statusText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:layout_marginStart="5.0dip" />
        <LinearLayout android:orientation="vertical" android:id="@id/downloaderDashboard" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
                <TextView android:id="@id/progressAsFraction" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="5.0dip" android:layout_alignParentStart="true" style="@android:style/TextAppearance.Small" />
                <TextView android:id="@id/progressAsPercentage" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignEnd="@id/progressBar" style="@android:style/TextAppearance.Small" />
                <ProgressBar android:id="@id/progressBar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="10.0dip" android:layout_below="@id/progressAsFraction" style="?android:progressBarStyleHorizontal" />
                <TextView android:id="@id/progressAverageSpeed" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/progressBar" android:layout_marginStart="5.0dip" android:layout_alignParentStart="true" style="@android:style/TextAppearance.Small" />
                <TextView android:id="@id/progressTimeRemaining" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/progressBar" android:layout_alignEnd="@id/progressBar" style="@android:style/TextAppearance.Small" />
            </RelativeLayout>
            <LinearLayout android:orientation="horizontal" android:id="@id/downloadButton" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <Button android:layout_gravity="center_vertical" android:id="@id/cancelButton" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="5.0dip" android:layout_marginBottom="10.0dip" android:minWidth="94.0dip" android:minHeight="40.0dip" android:text="@string/text_button_cancel" android:layout_weight="0.0" style="?android:buttonBarButtonStyle" />
                <Button android:layout_gravity="center_vertical" android:id="@id/pauseButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:minWidth="94.0dip" android:minHeight="40.0dip" android:text="@string/text_button_pause" android:layout_weight="0.0" android:layout_marginStart="10.0dip" android:layout_marginEnd="5.0dip" style="?android:buttonBarButtonStyle" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/approveCellular" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
        <TextView android:id="@id/textPausedParagraph1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/text_paused_cellular" />
        <TextView android:id="@id/textPausedParagraph2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/text_paused_cellular_2" />
        <LinearLayout android:orientation="horizontal" android:id="@id/buttonRow" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:layout_gravity="center" android:id="@id/resumeOverCellular" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/text_button_resume_cellular" style="?android:buttonBarButtonStyle" />
            <Button android:layout_gravity="center" android:id="@id/wifiSettingsButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/text_button_wifi_settings" style="?android:buttonBarButtonStyle" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>